--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,12 +1,26 @@
-# Your API key from Google AI Studio for Gemini
+
+# Primary Gemini API Key (Level 1)
+gemini.api.key=${GEMINI_API_KEY:YOUR_GEMINI_API_KEY_HERE}
+
+# Secondary Gemini API Key (Level 2 - Fallback)
+gemini.secondary.api.key=${GEMINI_SECONDARY_API_KEY:YOUR_SECONDARY_KEY_HERE}
+
+# Tertiary OpenAI API Key (Level 3 - Fallback)
+# Get your OpenAI key from: https://platform.openai.com/api-keys
+gemini.tertiary.api.key=${OPENAI_API_KEY:YOUR_OPENAI_KEY_HERE}
+
+# Quaternary DeepSeek API Key (Level 4 - Fallback)
+# Get your DeepSeek key from: https://platform.deepseek.com/
+gemini.quaternary.api.key=${DEEPSEEK_API_KEY:YOUR_DEEPSEEK_KEY_HERE}
+
+# Legacy mock data API key (for compatibility)
+gemini.mock.data.api.key=${GEMINI_API_KEY:YOUR_GEMINI_API_KEY_HERE}
 
 
+gemini.api.url=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent
 
-gemini.api.key=AIzaSyDsuAOgYXj3qP_2ZBLY1ZW8-6GpxG2WMPs
-
-gemini.mock.data.api.key=AIzaSyDsuAOgYXj3qP_2ZBLY1ZW8-6GpxG2WMPs
 # Your new API key from OpenWeatherMap for location
-openweathermap.api.key=1fc22dc763fb073233767a49896b437f
+openweathermap.api.key=${OPENWEATHERMAP_API_KEY:YOUR_OPENWEATHERMAP_KEY_HERE}
 
-# Google Cloud Translation API
-translate.google.api.key=AIzaSyD7NDFHAn1-IObkGkOYBZg4L9DtGoPnAxQ
+
+translate.google.api.key=${GOOGLE_TRANSLATE_API_KEY:YOUR_GOOGLE_TRANSLATE_KEY_HERE}
